k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bahinlink
  labels:
    name: bahinlink
    app: bahinlink
    environment: production
